2012-01-05  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/Makefile.am: Tweak autodetection of Qt utilities to
	handle differences in the Qt 4.6 and 4.7 pkg-config files.

2012-01-04  Colin Macdonald  <macdonald@maths.ox.ac.uk>

	* src/gplt_x11.c: Set WM_CLASS to "Gnuplot" for the benefit of various
	window managers.

2012-01-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c: Fix an uninitialized colorspec found by valgrind.
	The trigger was hidden3d handling of '... with labels tc palette'.

2012-01-02  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/graphics.c:  Establish a documented clipping
	behavior for rectangles - clip to fit in the graph unless one or both
	corners are given in screen coordinates.

2012-01-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotApplication.cpp (processEvent):
	* src/wxterminal/wxt_gui.cpp (wxt_atexit):
	In "persist" mode, if all qt plot windows were already closed when the
	main program exited then the daughter process would become a zombie.
	Even worse for wxt; if _any_ plot windows had been closed then the 
	persisting daughter process would become a zombie.
	Bugfix.

2011-12-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c src/plot.h src/qtterminal/qt_term.cpp:
	Provide a function cancel_history() that can be called by terminal
	helper functions after forking so that the history file isn't 
	trashed on exit.
	Bug #2950711

2011-12-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotEvent.h src/qtterminal/QtGnuplotItems.cpp
 	src/qtterminal/QtGnuplotItems.h src/qtterminal/QtGnuplotScene.cpp
 	src/qtterminal/QtGnuplotScene.h src/qtterminal/qt_term.cpp term/qt.trm:

	Organize Qt display list items into groups, one group per plot.
	Track display area of keybox entries so that mouse clicks there can
	toggle the visibility of the corresponding plot group.
	NB: Doesn't work if the key box is set to opaque.
