@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.358 2011/12/04 05:36:28 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.359 2011/12/29 18:35:56 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -2252,11 +2252,10 @@ set_loadpath()
     if (END_OF_COMMAND) {
 	clear_loadpath();
     } else while (!END_OF_COMMAND) {
-	if (isstring(c_token)) {
-	    int len;
-	    char *ss = gp_alloc(token_len(c_token), "tmp storage");
-	    len = (collect? strlen(collect) : 0);
-	    quote_str(ss,c_token,token_len(c_token));
+	char *ss;
+	if ((ss = try_to_get_string())) {
+	    int len = (collect? strlen(collect) : 0);
+	    gp_expand_tilde(&ss);
 	    collect = gp_realloc(collect, len+1+strlen(ss)+1, "tmp loadpath");
 	    if (len != 0) {
 		strcpy(collect+len+1,ss);
@@ -2265,7 +2264,6 @@ set_loadpath()
 	    else
 		strcpy(collect,ss);
 	    free(ss);
-	    ++c_token;
 	} else {
 	    int_error(c_token, "expected string");
 	}
